src/objects/DFC_Community_Action_Area__c.object
<CustomObject>
    <description>Links action areas to a community</description>
    <fields>
        <fullName>Action_Area_Display__c</fullName>
        <formula>Action_Area__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Area__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Action Area</label>
        <referenceTo>DFC_Action_Area__c</referenceTo>
        <relationshipLabel>DFC Community Action Area</relationshipLabel>
        <relationshipName>DFC_Community_Action_Area</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Name_Display__c</fullName>
        <formula>Community__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <referenceTo>DFC_Community__c</referenceTo>
        <relationshipLabel>DFC Community Action Area</relationshipLabel>
        <relationshipName>Action_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A brief description of how you plan to work towards to make your community dementia-friendly</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>DFC Community Action Area</label>
    <nameField>
        <displayFormat>DFCMA - {000000}</displayFormat>
        <label>Action Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Community Action Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>